[package]
name = "task_splitting"
version = "0.1.0"
authors = ["Maiko Mueller <maiko.mueller@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "*"
rayon_logs = "*"
itertools ="*"
rand = "*"
criterion = "*"

[[bench]]
name = "threeway"
harness = false
